# src/main/java/io/idev/storeapi/controller/AuthController.java
@@ -12,6 +12,7 @@ import org.springframework.security.authentication.BadCredentialsException;
 import org.springframework.security.authentication.LockedException;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.userdetails.UserDetails;
+import org.springframework.web.bind.annotation.CrossOrigin;
 import org.springframework.web.bind.annotation.ExceptionHandler;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
@@ -22,8 +23,9 @@ import io.idev.storeapi.StoreApiConstants;
 import io.idev.storeapi.api.controller.UserApi;
 import io.idev.storeapi.exceptions.UserAuthenticationException;
 import io.idev.storeapi.model.Cred;
-import io.idev.storeapi.model.Error;
+import io.idev.storeapi.model.Response;
 import io.idev.storeapi.model.Token;
+import io.idev.storeapi.model.UserPayload;
 import io.idev.storeapi.service.JwtUserDetailsService;
 import io.idev.storeapi.utils.JwtTokenUtil;
 
@@ -50,27 +52,34 @@ public class AuthController implements UserApi {
 	public ResponseEntity<Token> loginUser(@Valid @RequestBody Cred cred) {
 
 		try {
-			authenticate(cred.getUsername(), cred.getPassword());
+			authenticate(cred.getEmail(), cred.getPassword());
 		} catch (BadCredentialsException e) {
 			throw new UserAuthenticationException(String.format("Bad Credentials Provided", ""));
 		} catch (LockedException e) {
-			throw new UserAuthenticationException(String.format("User with username [%s] is Disbaled!", cred.getUsername()));
+			throw new UserAuthenticationException(
+					String.format("User with username [%s] is Disbaled!", cred.getEmail()));
 		} catch (Exception e) {
 			logger.error(e.getMessage());
 		}
 
-		final UserDetails userDetails = userDetailsService.loadUserByUsername(cred.getUsername());
+		final UserDetails userDetails = userDetailsService.loadUserByUsername(cred.getEmail());
 
 		final String token = jwtTokenUtil.generateToken(userDetails);
 
 		return new ResponseEntity<>(new Token().token(token).expiration("125478963").roles(""), HttpStatus.OK);
 
 	}
+	
+	@Override
+	public ResponseEntity<Response> addUser(@Valid @RequestBody UserPayload userPayload) {
+		return null;
+	}
 
 	@ExceptionHandler(value = UserAuthenticationException.class)
 	@ResponseStatus(HttpStatus.INTERNAL_SERVER_ERROR)
-	public Error hadnleUserAuthenticationException(UserAuthenticationException ex) {
-		return new Error().code(HttpStatus.INTERNAL_SERVER_ERROR.value()).exception(ex.getMessage());
+	public Response hadnleUserAuthenticationException(UserAuthenticationException ex) {
+		return new Response().code(HttpStatus.INTERNAL_SERVER_ERROR.value()).message(ex.getMessage())
+				.details(ex.getStackTrace().toString());
 	}
 
 }
