# src/main/java/io/idev/storeapi/dto/UserPrincipal.java
@@ -12,8 +12,12 @@ public class UserPrincipal extends User {
 	 */
 	private static final long serialVersionUID = -7028956164083621764L;
 
-	public UserPrincipal(String username, String password, boolean isEnabled, Collection<? extends GrantedAuthority> authorities) {
-		super(username, password, isEnabled, false, false, false, authorities);
+	public UserPrincipal(String username, String password, Collection<? extends GrantedAuthority> authorities) {
+		super(username, password, authorities);
 	}
-
+	
+	public UserPrincipal(String username, String password, boolean isEnabled, Collection<? extends GrantedAuthority> authorities) {
+		super(username, password, true, false, false, false, authorities);
+	}
+	
 }
